--- a/README
+++ b/README
@@ -29,3 +29,5 @@
 == HISTORY
 0.1		This is initial version with only contrast filter and a test html page.
 		Range of contrast value is +/- 100.
+0.2		Adding a gamma filter to the filters library, and update test page to
+		use it too.  Range for gamma value is 0.2 to 5.0.
